updated about bio

--- a/aboutme.html
+++ b/aboutme.html
@@ -116,22 +116,17 @@
               <div style="border: 2px solid #0000001e; width:10%; margin-bottom:7%; margin-top:3%;"> </div>
 
 
-              <div class ="about-paragraph2">
-                I’m Irene, a UX designer with a fascination for information architecture, streamlining task flows, and designing efficient solutions that can help individuals live more fulfilling lives.
-
-                My life experience has equipped me to become a tenacious problem-solver, resilient learner, and empathetic leader.
-
-                I'm dedicated to bridging the gap between users and digital experiences, and building well-structured systems that help people in finding and understanding the information they need. 
-
+                <div class ="about-paragraph2">
+                I’m Irene, a UX designer with a background in computer science, content strategy, and information architecture. I thrive on analyzing complex information ecosystems and finding solutions to organize and present information in a way that’s meaningful and useful to users. Building well-structured systems and helping people find, understand, and interact with the information they need is a gap I’m dedicated to bridging. 
                 </div>
 
                 <div class ="about-paragraph2">
-            
-                Outside of design, I love staying active through strength training, running, and exploring nature. I enjoy music and the arts, and connecting with people who have the same curiosity for life.  <!-- I’m currently building on my skills in information architecture through personal projects and eager to learn from experienced information architects.  -->
+                  Apart from design, I love maintaining an active lifestyle through strength training, running, and engaging in outdoor activities. I enjoy music and the arts, learning from others, and connecting with people from diverse backgrounds and experiences.
                 </div>
-              <div class ="about-paragraph2">
-                I’m always looking for opportunities to collaborate with other designers and gain feedback on my work. If you’d like to get in touch, I’d love to hear from you!
-                <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>
+
+                <div class ="about-paragraph2">
+                  I’m always excited to collaborate with other designers and gain feedback on my work. Let's get in touch!
+                  <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>
                 </div>
                 
               <!-- <div class ="about-paragraph2">
