updated about bio

--- a/aboutme.html
+++ b/aboutme.html
@@ -117,7 +117,7 @@
 
 
                 <div class ="about-paragraph2">
-                I’m Irene, a UX designer with a background in computer science, content strategy, and information architecture. I thrive on analyzing complex information ecosystems and finding solutions to organize and present information in a way that’s meaningful and useful to users. Building well-structured systems and helping people find, understand, and interact with the information they need is a gap I’m dedicated to bridging. 
+                I’m Irene, a UX designer with a background in computer science, content strategy, and information architecture. I thrive on analyzing complex information ecosystems and finding solutions to optimize and present information in a way that’s meaningful and useful to users. Constructing thoughtfully structured systems that enable people to find, understand, and interact with the elements they need is a gap I’m dedicated to bridging. 
                 </div>
 
                 <div class ="about-paragraph2">
