updated about bio

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
     <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-right:50px;">
       <br> <br>
       <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
-      <h1> Hey! I'm Irene Lue </h1>
+      <h1> HELLO! <br> I'M IRENE </h1>
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
       <h3 style="border:white 1px solid;"> 
-      I'm a UX designer streamlining task flows and optimizing complex information ecosystems
+      UX designer who loves optimizing complex information ecosystems, streamlining task flows, and designing digital experiences that help people live more fulfilling lives
       </h3>
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
