--- a/index.html
+++ b/index.html
@@ -126,26 +126,41 @@
     </nav> <!-- .navbar -->
 
     <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-right:50px;">
-      <br> <br>
+      
       <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
-      <h1> HELLO! <br> I'M IRENE </h1>
 
-      <!-- HEADER ROTATOR REMOVED STARTING HERE -->
-      <h3 style="border:white 1px solid;"> 
-      UX designer who loves optimizing complex information ecosystems, streamlining task flows, and designing digital experiences that help people live more fulfilling lives
-      </h3>
+      <div class="row">
 
-      <div class="container" style="margin-left:0px; margin-top:20px;">
-        <div class="row">
+        <!-- headliner -->
+        <div class="col-lg-6" style="border:white 1px solid;">
+          <h1> HELLO! <br> I'M IRENE </h1>
 
-          <a class="button-box" href="aboutme.html" target="_blank"> Read More </a>
+          <!-- HEADER ROTATOR REMOVED STARTING HERE -->
+          <h3 style="border:white 1px solid;"> 
+          UX designer who loves optimizing complex information ecosystems, streamlining task flows, and designing digital experiences that help people live more fulfilling lives
+          </h3>
 
-          <div class="column" style="width:2%;"></div>
+          <div class="container" style="margin-left:0px; margin-top:20px;">
+            <div class="row">
 
-          <a class="button-box" href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">Resume</a></li>
+              <a class="button-box" href="aboutme.html" target="_blank"> Read More </a>
+
+              <div class="column" style="width:2%;"></div>
+
+              <a class="button-box" href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">Resume</a></li>
+
+            </div>
+          </div>
 
         </div>
+
+        <!-- side image -->
+        <div class="col-lg-6" style="border:white 1px solid; margin-top:100px;">
+          <img id="prof-pic" src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="" style="margin-left:40px; width:90%; border-radius:400px;"> 
+        </div>
+
       </div>
+      
    
     </div>
   </section> <!-- End Hero -->
