--- a/index.html
+++ b/index.html
@@ -108,66 +108,39 @@
     <!-- </div> -->
   </header><!-- End Header -->
 
-  
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" style="padding-bottom:600px;">
-    <!-- 
-    <div class="container d-flex align-items-center justify-content-between">
-      <h1 class="logo"><a href="index.html"> Irene Lue </a></h1>
-    </div>
+  <main id="main">
 
-    <nav id="navbar" class="navbar">
-      <ul>
-      <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-      <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-      <li><a class="nav-link scrollto " href="#about">About</a></li>
-      <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
-      <i class="bi bi-list mobile-nav-toggle"></i>
-    </nav> <!-- .navbar -->
+    <!-- ======= Hero Section ======= -->
+    <section id="hero">
+      <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-right:0px;">
+        <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
+        <div class="row">
 
-    <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-right:50px;">
-      
-      <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
+          <!-- headliner -->
+          <div class="col-lg-6 col-md-6 col-sm-6" style="border:white 1px solid;">
+            <h1> HELLO! <br> I'M IRENE </h1>
+            <!-- HEADER ROTATOR REMOVED STARTING HERE -->
+            <h3 style="border:white 1px solid;"> 
+            UX designer who loves streamlining task flows and designing seamless digital experiences that make content more accessible and navigable
+            </h3>
 
-      <div class="row">
-
-        <!-- headliner -->
-        <div class="col-lg-6" style="border:white 1px solid;">
-          <h1> HELLO! <br> I'M IRENE </h1>
-
-          <!-- HEADER ROTATOR REMOVED STARTING HERE -->
-          <h3 style="border:white 1px solid;"> 
-          UX designer who loves optimizing complex information ecosystems, streamlining task flows, and designing digital experiences that help people live more fulfilling lives
-          </h3>
-
-          <div class="container" style="margin-left:0px; margin-top:20px;">
-            <div class="row">
-
-              <a class="button-box" href="aboutme.html" target="_blank"> Read More </a>
-
-              <div class="column" style="width:2%;"></div>
-
-              <a class="button-box" href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">Resume</a></li>
-
+            <div class="container" style="margin-left:0px; margin-top:20px;">
+              <div class="row">
+                <a class="button-box" href="aboutme.html" target="_blank"> Read More </a>
+                <div class="column" style="width:2%;"></div>
+                <a class="button-box" href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">Resume</a></li>
+              </div>
             </div>
           </div>
 
+          <!-- side image -->
+          <div class="col-lg-6 col-md-6 col-sm-6" style="border:white 1px solid; margin-top:120px;">
+            <img id="prof-pic" src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="" style="margin:auto; width:90%; border-radius:400px;"> 
+          </div>
         </div>
-
-        <!-- side image -->
-        <div class="col-lg-6" style="border:white 1px solid; margin-top:100px;">
-          <img id="prof-pic" src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="" style="margin-left:40px; width:90%; border-radius:400px;"> 
-        </div>
-
       </div>
-      
-   
-    </div>
-  </section> <!-- End Hero -->
+    </section> <!-- End Hero -->
 
-  
-
-  <main id="main">
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -220,19 +193,6 @@
               </div>
             </a>
           </div>
-
-          <!-- Proj 1: Covid-Code -->
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank">
-              <div class="image">
-                <img src="assets/img/portfolio/pomolo_2.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay2">
-                    <div class="image_title"> Pomolo </div>
-                    <p class="image_description"> Mobile, UX, VD, Concept
-                </div>
-              </div>
-            </a>
-          </div> -->
 
 
           <!-- Proj 2 -->
