--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <main id="main">
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero">
+    <section id="hero" style="border:white 1px solid; ">
       <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-right:0px;">
         <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
         <div class="row">
@@ -135,7 +135,7 @@
 
           <!-- side image -->
           <div class="col-lg-6 col-md-6 col-sm-6" style="border:white 1px solid; margin-top:120px;">
-            <img id="prof-pic" src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="" style="margin:auto; width:90%; border-radius:400px;"> 
+            <img id="prof-pic" src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="" style="margin:auto; width:80%; border-radius:400px;"> 
           </div>
         </div>
       </div>
