my brain is fried

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="row">
 
           <!-- headliner -->
-          <div class="col-lg-6 col-md-6 col-sm-6" style="border:white 1px solid;">
+          <div class="col-lg-6 col-md-6 col-sm-6" style="margin-top:50px; border:white 1px solid;">
             <h1> HELLO! <br> I'M IRENE </h1>
             <!-- HEADER ROTATOR REMOVED STARTING HERE -->
             <h3 style="border:white 1px solid;"> 
