my brain is fried

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <img src="assets/img/proj_chipotle/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> CHIPOTLE </div>
-                    <p class="image_description"> <em> Collaborative Mobile App Redesign  </em>
+                    <p class="image_description"> <em> Marketing, Visual Design, Mobile App Redesign  </em>
                     </p>
                 </div>
               </div>
@@ -172,6 +172,7 @@
                 <img src="assets/img/proj_post/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> THE WASHINGTON POST </div>
+                    <!-- <p class="image_description"> <em> Engaging the Next Generation </em> -->
                     <p class="image_description"> <em> Content Strategy, Information Architecture, Web Design </em>
                     </p>
                 </div>
