--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -144,7 +144,7 @@
 							<article class="entry entry-single">
 								<h2 class="title1" style="color: #C81E10">Chipotle</h2>
 
-								<h2 class="subtitle1"> COLLABORATIVE MOBILE REDESIGN </h2>
+								<h2 class="subtitle1"> MARKETING, VISUAL DESIGN, MOBILE APP REDESIGN </h2>
 
 								<h2 class="subtitle2">
 									Immerse yourself in our redesigned Chipotle mobile app that combines convenience, personalization, and fun. Bringing you a seamless experience for hassle-free group orders and payments, exclusive loyalty rewards for frequent customers, and interactive games that keep you engaged and excited about your next burrito bowl.
