my brain is fried

--- a/proj_thewashingtonpost.html
+++ b/proj_thewashingtonpost.html
@@ -200,7 +200,7 @@
 											<a class="about-link2" href="https://www.figma.com/file/ACZ0s3scQi8bZ1QPJ2NfIR/Portfolio---The-Washington-Post?node-id=4%3A6&t=WlnMnhdbNBVclya8-1" target="_blank" > Figma Work </a>
 											<br />
 
-											<a class="about-link2" href="https://drive.google.com/file/d/1Zmph9YTb76YHA6EjyMTkKHQmqYHsQFZB/view?usp=share_link" target="_blank" > Process Deck </a>
+											<a class="about-link2" href="https://drive.google.com/file/d/1pn2ht5C2gdLahEhe3RYIIy26-Mq0Zd4d/view?usp=sharing" target="_blank" > Process Deck </a>
 											<br />
 
 
@@ -733,7 +733,7 @@
 
 										<a class="entry-buttons3" href="https://www.figma.com/file/ACZ0s3scQi8bZ1QPJ2NfIR/Portfolio---The-Washington-Post?type=design&node-id=4-6" target="_blank" >FIGMA WORK</a >
 
-										<a class="entry-buttons3" href="https://drive.google.com/file/d/1Zmph9YTb76YHA6EjyMTkKHQmqYHsQFZB/view?usp=share_link" target="_blank" > PROCESS DECK </a>
+										<a class="entry-buttons3" href="https://drive.google.com/file/d/1pn2ht5C2gdLahEhe3RYIIy26-Mq0Zd4d/view?usp=sharing" target="_blank" > PROCESS DECK </a>
 									</div>
 								</div>
 							</article>
