--- a/aboutme.html
+++ b/aboutme.html
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class ="about-paragraph2">
-                  Apart from design, I love maintaining an active lifestyle through strength training, running, and engaging in outdoor activities. I enjoy music and the arts, learning from others, and connecting with people from diverse backgrounds and experiences.
+                  Apart from design, I love maintaining an active lifestyle through strength training, running, and engaging in outdoor activities. I enjoy music and the arts, and connecting with people from diverse backgrounds and experiences.
                 </div>
 
                 <div class ="about-paragraph2">
