--- a/proj_pomolo2.html
+++ b/proj_pomolo2.html
@@ -321,7 +321,7 @@
 											<!-- START: VPC -->
 											<div class="col-lg-12 mx-auto" style=" border: 1px solid white; margin-bottom: 0%; margin-right: 60px; " >
 
-												<h3>VALUE PROPOSITION CANVAS</h3>
+												<h3>VALUE PROPOSITION</h3>
 												<div style=" border: 1.5px solid #C81E10; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
 												<p style="margin-bottom: 30px; display: inline-block;"> We created a value proposition canvas to ensure a strong market fit and align our product and feature development with the customer's values and needs. Our value map highlighted the importance of timely and accurate orders, real-time order tracking, and options for modifying orders based on dietary restrictions or allergiesm, and providing a seamless and engaging ordering experience. </p>
 
