--- a/proj_thewashingtonpost.html
+++ b/proj_thewashingtonpost.html
@@ -408,7 +408,7 @@
 										</div>
 									</div>
 
-									<!-- ideation image 1 -->
+									<!-- ideation imgs -->
 									<section id="portfolio-details" class="portfolio-details" style=" border: white 1px solid; margin-top: 20px; margin-bottom: -50px; margin-right: auto; margin-left: auto; width: 100%;">
 											<!-- side by side imgs start here -->
 										<div class="row">
