--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -149,15 +149,9 @@
 								</h2>
 
 								<h2 class="subtitle2">
-									For my content strategy course in UCLA's UX Design program, I
-									was given the task of selecting a company and developing a
-									comprehensive redesign strategy to improve its online site. I
-									chose Bala Bangles for my love of health and wellness, and
-									curiosity for the meditation and at-home fitness space. It was
-									a rewarding exercise in which I gained a deeper understanding
-									for applying efficient management strategies in digital
-									platforms, and ensuring content is being effectively delivered
-									to meet user needs and business goals.
+									For my content strategy course under UCLA's UX design program, I developed a
+									comprehensive redesign strategy to refine Bala Bangles' online site. For 6 weeks, I focused on applying content strategy and efficient content management approaches to enhance user engagement and elevate its online digital platform. 
+
 								</h2>
 
 								<div
