--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -149,9 +149,7 @@
 								</h2>
 
 								<h2 class="subtitle2">
-									For my content strategy course under UCLA's UX design program, I developed a
-									comprehensive redesign strategy to refine Bala Bangles' online site. For 6 weeks, I focused on applying content strategy and efficient content management approaches to enhance user engagement and elevate its online digital platform. 
-
+									Under UCLA Extension's content strategy course, I was tasked with the challenge of improving customer satisfaction for a start-up product or service. To address this, I took the initiative to analyze Bala Bangles’ product listing and demonstration pages. I applied content design strategies to optimize readability and navigation, ensuring users effortlessly discover the right products and workouts tailored to their skills and fitness goals.
 								</h2>
 
 								<div
