--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <div class="image" >
                 <img src="assets/img/proj_chipotle/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> CHIPOTLE </div>
+                    <div class="image_title"> CHIPOTLE REDESIGN </div>
                     <p class="image_description"> <em> Marketing, Visual Design, Mobile App Redesign  </em>
                     </p>
                 </div>
@@ -171,7 +171,7 @@
               <div class="image" >
                 <img src="assets/img/proj_post/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> THE WASHINGTON POST </div>
+                    <div class="image_title"> THE WASHINGTON POST <br> REDESIGN </div>
                     <!-- <p class="image_description"> <em> Engaging the Next Generation </em> -->
                     <p class="image_description"> <em> Content Strategy, Information Architecture, Web Design </em>
                     </p>
@@ -187,7 +187,7 @@
               <div class="image" >
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> BALA BANGLES </div>
+                    <div class="image_title"> BALA BANGLES <br> REDESIGN </div>
                     <p class="image_description"> <em> Content Strategy, Information Architecture, Web Design </em>
                     </p>
                 </div>
