updated bala FINAL

--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -142,7 +142,7 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-10 col-lg-7 entries">
 							<article class="entry entry-single">
-								<h2 class="title1" style="color: #f2cc5c; padding-bottom: 30px">
+								<h2 class="title1" style="padding-bottom: 10px">
 									Bala Bangles
 								</h2>
 
@@ -151,14 +151,24 @@
 								</h2> -->
 
 								<h2 class="subtitle2">
-									Under UCLA Extension's content strategy course, I was tasked
+									<!-- Under UCLA Extension's content strategy course, I was tasked
 									with the challenge of improving customer satisfaction for a
 									start-up product or service. To address this, I took the
 									initiative to analyze Bala Bangles’ product listing and
 									demonstration pages. I applied content design strategies to
 									optimize readability and navigation, ensuring users
 									effortlessly discover the right products and workouts tailored
-									to their skills and fitness goals.
+									to their skills and fitness goals. -->
+
+									Under UCLA Extension's content strategy course, I tackled the
+									task of identifying and addressing issues within a startup's
+									digital platform using content strategy methodologies to
+									enhance its online user experience. I revamped Bala Bangles'
+									product listing, product guide, and "Balacize" pages, creating
+									a seamless process for users to explore and find products.
+									Applying content design strategies, I improved the readability
+									and navigation of its online site, facilitating users'
+									discovery of personalized products and workouts.
 								</h2>
 
 								<div
@@ -166,7 +176,7 @@
 									style="margin-bottom: 12%; border-radius: 15px"
 								>
 									<img
-										src="assets/img/proj_bala/cover4.png"
+										src="assets/img/proj_bala/cover.png"
 										style="width: 100%"
 										alt=""
 										class="img-fluid"
@@ -267,59 +277,56 @@
 									>
 										<!-- START: WHAT IS BALA BANGLES -->
 										<div
-											class="col-lg-6 mx-auto"
+											class="col-lg-5 mx-auto"
 											style="
 												border: 1px solid white;
 												margin-bottom: 0%;
 												margin-right: 60px;
 											"
 										>
-											<h3>WHAT IS BALA BANGLES?</h3>
+											<h3>THE PROBLEM SPACE</h3>
 											<div
 												style="
 													border: 1.5px solid #f2cc5c;
 													width: 10%;
-													margin-bottom: 4%;
-													margin-top: 4%;
+													margin-bottom: 8%;
+													margin-top: 8%;
 												"
 											></div>
 											<p>
-												Bala Bangles are one-size-fits-all, wearable weights
-												made for yogis or at-home athletes. They offer versatile
-												tools and weights that can be worn on wrists and ankles
-												for athletic, recreational, and domestic activities such
-												as yoga, aerobics, boxing, pilates, at-home workouts, or
-												core training. It's designed for those that want
-												functional, compact, and beautiful equipment that can
-												take their workouts to the next level and change the way
-												they move.
-
-												<!-- <blockquote>
-                        <p>
-                          How can we transform the common login and registration 
-                          experience to help
-                          students feel at ease while saving time and energy?
-                        </p>
-                      </blockquote> -->
+												How can we ensure a seamless product search and
+												discovery process, allowing users to effortlessly find
+												the equipment that matches their lifestyle and
+												preferences?
 											</p>
 										</div>
 
-										<!-- BACKGROUND IMG -->
+										<!-- START: WHAT IS BALA BANGLES -->
 										<div
-											class="col-lg-4 mx-auto"
-											style="border: 1px solid white"
+											class="col-lg-5 mx-auto"
+											style="
+												border: 1px solid white;
+												margin-bottom: 0%;
+												margin-right: 60px;
+												float: right;
+											"
 										>
-											<section id="portfolio-details" class="portfolio-details">
-												<div class="portfolio-details-slider">
-													<img
-														style="border-radius: 50%"
-														src="assets/img/proj_bala/background.jpg"
-														alt=""
-													/>
-												</div>
-											</section>
+											<h3>THE SOLUTION</h3>
+											<div
+												style="
+													border: 1.5px solid #f2cc5c;
+													width: 10%;
+													margin-bottom: 8%;
+													margin-top: 8%;
+												"
+											></div>
+											<p>
+												By blending content strategy and information
+												architecture techniques, we have the potential to
+												transform the existing content structure, enhancing
+												navigation and overall flow.
+											</p>
 										</div>
-										<!-- END: BACKGROUND IMG -->
 
 										<hr
 											class="solid"
@@ -339,10 +346,10 @@
 											></div>
 
 											<p style="margin-bottom: 30px; display: inline-block">
-												Starting off, I asked myself a few initial key questions
-												to gather a deeper understanding of Bala Bangles'
-												customer demographic and any opportunities for
-												improvement with its current online experience.
+												I asked myself a few initial key questions to gather a
+												deeper understanding of Bala Bangles' customer
+												demographic and any opportunities for improvement with
+												its current online experience.
 											</p>
 
 											<ol style="margin-bottom: 30px; display: inline-block">
@@ -359,7 +366,7 @@
 															color: #efc64e;
 															font-weight: 500;
 															font-size: 18px;
-															letter-spacing: 0.3px;
+															letter-spacing: 0px;
 														"
 													>
 														Who is our user?
@@ -383,7 +390,7 @@
 															color: #efc64e;
 															font-weight: 500;
 															font-size: 18px;
-															letter-spacing: 0.3px;
+															letter-spacing: 0px;
 														"
 													>
 														What are our users' pain points and goals?
@@ -441,8 +448,14 @@
 										"
 									></div>
 
-									<p>
-										To attain a visual understanding of a customer's experience,
+									<p
+										style="
+											display: in-line block;
+											float: left;
+											margin-bottom: 40px;
+										"
+									>
+										<!-- To attain a visual understanding of a customer's experience,
 										I created a customer journey map to gain insight into
 										opportunities for improvement within Bala Bangles' site. I
 										divided the customer journey into 5 key stages where each
@@ -452,7 +465,13 @@
 										that the main area of concern was stage 3, Decision. I found
 										that the best opportunity for improvement was improving the
 										current personalization framework to provide customers
-										personalized content and a tailor-made experience.
+										personalized content and a tailor-made experience. -->
+
+										To attain a visual understanding of a customer's experience,
+										I created a customer journey map, highlighting crucial
+										stages and touch-points. Identifying the pivotal "Decision"
+										stage as a concern, I pinpointed enhancing personalization
+										for tailored content as a prime opportunity for improvement.
 									</p>
 
 									<!-- CUSTOMER JOURNEY IMG -->
@@ -640,7 +659,9 @@
 														margin-top: 4%;
 													"
 												></div>
-												<p>Conversation flow for virtual assistant feature</p>
+												<p style="margin-bottom: 20px">
+													Conversation flow for virtual assistant feature
+												</p>
 											</div>
 											<!-- END OF SITE MAP PARAGRAPH-->
 										</div>
@@ -707,7 +728,7 @@
 											style="
 												margin-top: 0px;
 												padding: 30px;
-												border: #999 0.5px solid;
+												border: #6a6a6a 0.5px solid;
 											"
 										>
 											<div>
@@ -731,7 +752,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
@@ -759,7 +780,7 @@
 											style="
 												margin-top: 50px;
 												padding: 30px;
-												border: #999 0.5px solid;
+												border: #6a6a6a 0.5px solid;
 											"
 										>
 											<div>
@@ -783,7 +804,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
@@ -815,7 +836,7 @@
 											</div>
 
 											<div style="padding-bottom: 30px">
-												<span style=" font-family: 'Mukta'; font-weight: 300; font-size: 15px; color: #999; letter-spacing: 0.3px; " >
+												<span style=" font-family: 'Mukta'; font-weight: 300; font-size: 15px; color: #6a6a6a; letter-spacing: 0.3px; " >
 													<em> Product Listing</em>
 										
 												</span>
@@ -856,7 +877,7 @@
 											style="
 												margin-top: 50px;
 												padding: 30px;
-												border: #999 0.5px solid;
+												border: #6a6a6a 0.5px solid;
 											"
 										>
 											<div>
@@ -880,7 +901,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
@@ -908,7 +929,7 @@
 											style="
 												margin-top: 50px;
 												padding: 30px;
-												border: #999 0.5px solid;
+												border: #6a6a6a 0.5px solid;
 											"
 										>
 											<div>
@@ -932,7 +953,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
@@ -976,7 +997,7 @@
 											style="
 												margin-top: 50px;
 												padding: 30px;
-												border: #999 0.5px solid;
+												border: #6a6a6a 0.5px solid;
 											"
 										>
 											<div>
@@ -1000,7 +1021,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
@@ -1041,7 +1062,7 @@
 											style="
 												margin-top: 50px;
 												padding: 30px;
-												border: #999 0.5px solid;
+												border: #6a6a6a 0.5px solid;
 											"
 										>
 											<div>
@@ -1065,7 +1086,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
@@ -1131,7 +1152,7 @@
 										"
 									>
 										<!-- START: ORIGINAL / HERO HEADER -->
-										<div style="padding: 30px; border: #999 0.5px solid">
+										<div style="padding: 30px; border: #6a6a6a 0.5px solid">
 											<div>
 												<span
 													style="
@@ -1153,7 +1174,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
@@ -1178,7 +1199,7 @@
 											style="
 												margin-top: 50px;
 												padding: 30px;
-												border: #999 0.5px solid;
+												border: #6a6a6a 0.5px solid;
 											"
 										>
 											<div>
@@ -1202,7 +1223,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
@@ -1227,7 +1248,7 @@
 											style="
 												margin-top: 50px;
 												padding: 30px;
-												border: #999 0.5px solid;
+												border: #6a6a6a 0.5px solid;
 											"
 										>
 											<div>
@@ -1251,7 +1272,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
@@ -1276,7 +1297,7 @@
 											style="
 												margin-top: 50px;
 												padding: 30px;
-												border: #999 0.5px solid;
+												border: #6a6a6a 0.5px solid;
 											"
 										>
 											<div>
@@ -1300,7 +1321,7 @@
 														font-family: 'Mukta';
 														font-weight: 300;
 														font-size: 15px;
-														color: #999;
+														color: #6a6a6a;
 														letter-spacing: 0.3px;
 													"
 												>
