updated bala FINAL

--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -146,9 +146,9 @@
 									Bala Bangles
 								</h2>
 
-								<!-- <h2 class="subtitle1">
+								<h2 class="subtitle1">
 									CONTENT STRATEGY, INFORMATION ARCHITECTURE, WEB DESIGN
-								</h2> -->
+								</h2>
 
 								<h2 class="subtitle2">
 									<!-- Under UCLA Extension's content strategy course, I was tasked
