--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -142,7 +142,7 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-10 col-lg-7 entries">
 							<article class="entry entry-single">
-								<h2 class="title1" style="color: #C81E10">Chipotle</h2>
+								<h2 class="title1">Chipotle</h2>
 
 								<h2 class="subtitle1"> MARKETING, VISUAL DESIGN, MOBILE APP REDESIGN </h2>
 
