--- a/aboutme.html
+++ b/aboutme.html
@@ -121,11 +121,11 @@
                 </div>
 
                 <div class ="about-paragraph2">
-                  Apart from design, I love maintaining an active lifestyle through strength training, running, and engaging in outdoor activities. I enjoy music and the arts, and connecting with people from diverse backgrounds and experiences.
+                  Apart from design, I love leading an active lifestyle through strength training, running, and engaging in outdoor activities. I love music and the arts, as well as exploring new places through travel and connecting with people.
                 </div>
 
                 <div class ="about-paragraph2">
-                  I’m always excited to collaborate with other designers and gain feedback on my work. Let's get in touch!
+                  I’m always excited to collaborate with other designers and gain feedback on my work. I'd love to hear from you!
                   <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>
                 </div>
                 
