--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -142,8 +142,12 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-10 col-lg-7 entries">
 							<article class="entry entry-single">
-								<h2 class="title1" style="padding-bottom: 10px">
-									Bala Bangles
+								<h2
+									class="title1"
+									style="color: #f2cc5c"
+									style="padding-bottom: 10px"
+								>
+									Bala Bangles Redesign
 								</h2>
 
 								<h2 class="subtitle1">
