--- a/proj_thewashingtonpost.html
+++ b/proj_thewashingtonpost.html
@@ -142,7 +142,7 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-10 col-lg-7 entries">
 							<article class="entry entry-single">
-								<h2 class="title1" style="color: #346BF3">The Washington Post</h2>
+								<h2 class="title1" style="color: #346BF3">The Washington Post Redesign </h2>
 
 								<h2 class="subtitle1" > CONTENT STRATEGY, INFORMATION ARCHITECTURE, WEB DESIGN </h2>
 
