--- a/aboutme.html
+++ b/aboutme.html
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class ="about-paragraph2">
-                  Apart from design, I love leading an active lifestyle through strength training, running, and engaging in outdoor activities. I love music and the arts, as well as exploring new places through travel and connecting with people.
+                  Apart from design, I love leading an active lifestyle through strength training, running, and engaging in outdoor activities. I love music, connecting with people, and exploring new places through traveling.
                 </div>
 
                 <div class ="about-paragraph2">
