--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -147,7 +147,7 @@
 									style="color: #f2cc5c"
 									style="padding-bottom: 10px"
 								>
-									Bala Bangles Redesign
+									Bala Bangles 
 								</h2>
 
 								<h2 class="subtitle1">
