--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -165,12 +165,23 @@
 									to their skills and fitness goals. -->
 
 									Under UCLA Extension's content strategy course, I was given
-									the task of using content strategy techniques to identify and
-									address issues within a startup's digital platform. Moving
+									the task of applying content strategy techniques to identify
+									and address issues within a startup's digital platform.
+									<!-- Moving
 									forward with Bala Bangles, I revamped the product listing,
 									product guide, and "Balacize" page, facilitating users'
 									discovery of personalized products and workouts, and refining
 									the readability and navigation flow of its online site.
+
+									I was tasked with the challenge of improving customer satisfaction for a start-up product or service. To address this,  -->
+									I took the initiative to analyze Bala Bangles’ product
+									listing, product guide, and "Balacize" page, and applied
+									content design strategies to optimize its readability and
+									navigation flow. My overarching objective was to facilitate an
+									effortless discovery process for customers, ensuring users
+									find the right products and workouts tailored to their skills
+									and fitness goals.
+
 									<!-- creating a seamless process for users to explore and discover
 									products. Applying content design strategies, I improved the
 									readability and navigation of its online site, facilitating
